--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/png" href="/anyfeast-logo.png" />
+    <link rel="apple-touch-icon" href="/anyfeast-logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AnyFeast - AI-Powered Personalized Meal Kits</title>
     <meta name="description" content="Personalized meal kits tailored to your taste, dietary needs, and schedule. Let AI do the planning while you enjoy the cooking." />
@@ -10,11 +12,11 @@
     <meta property="og:title" content="AnyFeast - AI-Powered Personalized Meal Kits" />
     <meta property="og:description" content="Personalized meal kits tailored to your taste, dietary needs, and schedule. Let AI do the planning while you enjoy the cooking." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/og-image.png" />
+    <meta property="og:image" content="/anyfeast-logo.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@AnyFeast" />
-    <meta name="twitter:image" content="/og-image.png" />
+    <meta name="twitter:image" content="/anyfeast-logo.png" />
   </head>
 
   <body>
